-
Bug
-
Resolution: Done
-
P1: Critical
-
5.1.0
-
None
-
4f8537ff8c9427705e3587861a62fe81cf3e503b
Steps to reproduce (in 5.1):
- Start application
- Activate one effect (click one on the left side)
- Then activate another effect
- bam...
This crash started happening after introduction of the new render loop, so something in the scene graph is now broken.